--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Photo Album</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="photo_album_image">Photo Album Image</string>
+    <string name="favorites">Favorites</string>
+    <string name="delete_album">Delete Album</string>
 </resources>
